feat: 방 나가기 API 추가
